--- a/tasks/universe.yml
+++ b/tasks/universe.yml
@@ -6,19 +6,19 @@
 #  apt_repository: >
 #    repo="deb http://archive.ubuntu.com/ubuntu {{ansible_lsb.codename|lower}} universe"
 #    state=present
-
-- name: add universe updates repository
-  register: universe2_result
-  sudo: yes
-  apt_repository: >
-    repo="deb http://archive.ubuntu.com/ubuntu {{ansible_lsb.codename|lower}}-updates universe"
-    state=present
-
-- name: apt-get update
-  apt: update_cache=yes cache_valid_time=0
-  sudo: yes
-  #when: universe_result.changed or universe2_result.changed
-  when: universe2_result.changed
+#
+#- name: add universe updates repository
+#  register: universe2_result
+#  sudo: yes
+#  apt_repository: >
+#    repo="deb http://archive.ubuntu.com/ubuntu {{ansible_lsb.codename|lower}}-updates universe"
+#    state=present
+#
+#- name: apt-get update
+#  apt: update_cache=yes cache_valid_time=0
+#  sudo: yes
+#  #when: universe_result.changed or universe2_result.changed
+#  when: universe2_result.changed
 
 - name: apt-get update
   apt: update_cache=yes cache_valid_time=3600
